[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/create_account_form.gd" type="Script" id=1]

[node name="CreateAccountForm" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
margin_right = 220.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
size_flags_vertical = 3
text = "Create Account"
align = 1
valign = 1

[node name="InputBox" type="VBoxContainer" parent="."]
margin_top = 74.0
margin_right = 220.0
margin_bottom = 208.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailLabel" type="Label" parent="InputBox"]
margin_right = 220.0
margin_bottom = 14.0
text = "Email"

[node name="EmailInput" type="LineEdit" parent="InputBox"]
margin_top = 18.0
margin_right = 220.0
margin_bottom = 42.0

[node name="PasswordLabel" type="Label" parent="InputBox"]
margin_top = 46.0
margin_right = 220.0
margin_bottom = 60.0
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInput" type="LineEdit" parent="InputBox"]
margin_top = 64.0
margin_right = 220.0
margin_bottom = 88.0
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmPasswordLabel" type="Label" parent="InputBox"]
margin_top = 92.0
margin_right = 220.0
margin_bottom = 106.0
text = "Confirm Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmPasswordInput" type="LineEdit" parent="InputBox"]
margin_top = 110.0
margin_right = 220.0
margin_bottom = 134.0
secret = true
selecting_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="."]
margin_top = 212.0
margin_right = 220.0
margin_bottom = 226.0
autowrap = true

[node name="ButtonBox" type="HBoxContainer" parent="."]
margin_top = 250.0
margin_right = 220.0
margin_bottom = 270.0
size_flags_horizontal = 9
size_flags_vertical = 10

[node name="GoBackButton" type="Button" parent="ButtonBox"]
margin_right = 25.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -502.628, -13.1575 )
focus_mode = 0
enabled_focus_mode = 0
text = "<-"
__meta__ = {
"_editor_description_": ""
}

[node name="CreateAccountButton" type="Button" parent="ButtonBox"]
margin_left = 29.0
margin_right = 220.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -502.628, -13.1575 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "Create Account"
